# snowman

./: .gitignore  README.asciidoc
src/: CMakeLists.txt
src/classner/: CMakeLists.txt  classanalyzer.cpp  functionanalyzer.cpp
src/classner_module/: CMakeLists.txt
src/nc/arch/x86/: X86InstructionAnalyzer.cpp
src/nc/core/ir/cgen/: DefinitionGenerator.cpp
src/nc/core/likec/: TreePrinter.cpp
src/nocode/: CMakeLists.txt  main.cpp
